# lentil

./: .coveragec  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: deploy.yml  docs.yml  pypi.yml  test.yml
docs/: Makefile  about.rst  basics.rst  changes.rst  conf.py  docs.rst  index.rst  installation.rst  license.rst  reference.rst  release.rst  requirements.txt  versions.json
docs/_templates/: index.html  indexcontent.html
docs/api/: convolvable.rst  detector.rst  lentil.rst  modeltools.rst  private.rst  radiometry.rst  util.rst  wfe.rst  zernike.rst
docs/dev/: changes.rst  contributing.rst  index.rst  install.rst  internals.rst  publishing.rst
docs/examples/: bandpass_resampling.rst  bayer.rst  broadband.rst  dispersion.rst  index.rst  matlab_interface.rst  radiometry.rst  segmented.rst  simple.rst  tilt.rst
docs/getting_started/: index.rst  install.rst  next_steps.rst  overview.rst  quickstart.rst  tutorial.rst
lentil/: __init__.py  cache.py  convolvable.py  detector.py  extent.py  field.py  fourier.py  fpa.py  helper.py  mathtools.py  modeltools.py  plane.py  prop.py  propagate.py  ptype.py  radiometry.py  scratch.ipynb  segmented.py  shape.py  tmp.py  util.py  wavefront.py  wfe.py  zernike.py
tests/: conftest.py  test_cache.py  test_convolvable.py  test_detector.py  test_detector_gain.py  test_detector_windowable.py  test_field.py  test_fourier.py  test_helper.py  test_mathtools.py  test_modeltools.py  test_plane.py  test_propagate.py  test_propagate_fft.py  test_propagate_mask.py  test_propagate_segmented.py  test_propagate_slice.py  test_radiometry_blackbody.py  test_radiometry_spectrum.py  test_util.py  test_wavefront.py  test_wfe.py  test_zernike.py
(+272 files in other folders)
