[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lentil"
description = "Heart-healthy physical optics"
authors = [
    {name = "Andy Kee"},
]
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.rst"}
dependencies = [
    "numpy>=1.17",
    "scipy",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/andykee/lentil"
Documentation = "https://andykee.github.io/lentil/"
"Bug Tracker" = "https://github.com/andykee/lentil/issues"

[tool.setuptools]
packages = ["lentil"]

[tool.setuptools.dynamic]
version = {attr = "lentil.__version__"} 