[metadata]
name = Lentil
author = Andy Kee
url = https://lentil.readthedocs.io
project_urls =
    Documentation = https://lentil.readthedocs.io
    Code = https://github.com/andykee/lentil
    Issue tracker = https://github.com/andykee/lentil/issues
license = BSD-3-Clause
description = Heart-healthy physical optics
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = lentil
include_package_data = true
python_requires = >= 3.7
test_suite = tests
tests_require = pytest
